# finance_manager

./: Cargo.toml  README.md  Rocket.toml  diesel.toml
migrations/2024-07-28-002552_init-migration/: down.sql  up.sql
migrations/2024-08-18-180850_income_goals/: down.sql  up.sql
migrations/2024-08-18-231505_add_saving_to_goals/: down.sql  up.sql
src/: lib.rs  model.rs  repositories.rs  schema.rs
src/command/: commands.rs  errors.rs
src/routes/: budget.rs  goal.rs  income.rs  mod.rs  transactions.rs  user.rs
src/utils/: hashing.rs  jwt_token.rs  mod.rs
