[package]
name = "finance_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket ={ version = "0.5.1", features = ["json"]}
serde= {version="1.0", features = ["derive"]}
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2", "numeric", "serde_json"] }
serde_json = "1.0"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
clap = { version = "4.5.11", features = ["derive"]}
dotenv = "0.15"
chrono = {version = "0.4", features = ["serde"]}
bigdecimal = { version = "0.4.5", features = ["serde"] }
log='0.4.21'
argon2="0.5.3"
diesel_migrations = "2.0"
rocket_sync_db_pools ={version = "0.1.0", features = ["diesel_postgres_pool"]}
validator = { version = "0.18.1", features = ["derive"] }
validator_derive = "0.18.1"
thiserror = { version = "1.0.60" }
env_logger = "0.11.5"
rocket_cors = "0.6"
http = "1.1.0"  # Add the http crate if it's not already present

[dev-dependencies]
reqwest={ version = "0.12.5", features = ["json", "blocking"]}